feat: add layout components

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html {
 
 body {
   height: 100%;
-  background-image: linear-gradient(90deg, #f1f1f1, #88BFD6);
+  background-image: linear-gradient(90deg, #f1f1f1, #88bfd6);
 }
 
 a {
